# ipynao

./: .coveragerc  .gitignore  CNAME  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  ipynao.json  jupyter-lite.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  webpack.config.js
.github/workflows/: build.yml  deploy.yml  docs.yml
content/: introduction.ipynb
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
docs/source/_static/: embed-bundle.js.LICENSE.txt
examples/: introduction.ipynb
ipynao/: __init__.py  _frontend.py  _version.py  example.py  nao_robot.py
ipynao/nbextension/: extension.js
ipynao/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: extension.ts  index.ts  nao-socket.io.d.ts  naoqi.ts  plugin.ts  qimessaging.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts
